4-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: splunk-svc
  namespace: splunk
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
    - protocol: TCP
      name: hec
      port: 8088
    - protocol: TCP
      name: fwd
      port: 9997
    - protocol: TCP
      name: syslog
      port: 1514
  selector:
    app: splunk
